--- a/templates/scanner/add_foodanddrink_page.html
+++ b/templates/scanner/add_foodanddrink_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div>
-  <form id="LifestylePageForm" method="post" action='scanner/add_lifestyle_page'>
+  <form id="FoodAndDrinkPageForm" method="post" action='scanner/add_foodanddrink_page'>
     {% csrf_token %}
     {% for field in form %}
       {{ field.error }}
