--- a/templates/scanner/add_foodanddrink_page.html
+++ b/templates/scanner/add_foodanddrink_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <div>
-  <form id="FoodAndDrinkPageForm" method="post" action='scanner/add_foodanddrink_page'>
+  <form id="FoodAndDrinkPageForm" method="post" action="{% url 'home' %}">
     {% csrf_token %}
     {% for field in form %}
       {{ field.error }}
