--- a/templates/scanner/add_nightlife_page.html
+++ b/templates/scanner/add_nightlife_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <div>
-  <form id="NightlifePageForm" method="post" action="/scanner/add_nightlife_page">
+  <form id="NightlifePageForm" method="post" action="{% url 'home' %}">
     {% csrf_token %}
     {% for field in form %}
       {{ field.error }}
