--- a/templates/scanner/register.html
+++ b/templates/scanner/register.html
@@ -4,7 +4,7 @@
   {% if registered %}
     Thank you for registering!
   {% else %}
-    <form id="user_form" method="post" action="{% url 'register' %}" enctype="multipart/form-data">
+    <form id="user_form" method="post" action="{% url 'scanner:register' %}" enctype="multipart/form-data">
       {% csrf_token %}
       {{ user_form.as_p }}
       {{ profile_form.as_p }}
