--- a/templates/scanner/base.html
+++ b/templates/scanner/base.html
@@ -2,7 +2,7 @@
         CITYSCANNER BASE HTML
 ===============================-->
 <!DOCTYPE html>
-{% load staticfiles %}
+{% load static %}
 <html lang="en">
 
 <head>
@@ -16,23 +16,23 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="{% static 'css/assets/img/favicon.png' %}" rel="icon">
-    <link href="{% static 'css/assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+    <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+    <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="{% static 'css/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/venobox/venobox.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/assets/vendor/aos/aos.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/venobox/venobox.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="{% static 'css/assets/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: Moderna - v2.0.1
