--- a/templates/scanner/results.html
+++ b/templates/scanner/results.html
@@ -6,7 +6,7 @@
   {% if pages %}
   <ul>
     {% for page in pages %}
-      <li>{{ page.name }}</li>
+      <li><a href="{{ page.url }}">{{ page.name }}</a>
     {% endfor %}
   </ul>
   {% endif %}
