Added choice of location

--- a/templates/scanner/homepage.html
+++ b/templates/scanner/homepage.html
@@ -45,7 +45,7 @@ Get Started
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
-              <h4 class="title"><a href="/profile">Add a new Location</a></h4>
+              <h4 class="title"><a href="scanner/locationchoice">Add a new Location</a></h4>
               <p class="description">You must be signed in to do this</p>
               <a href="/register"><button type="button" class="btn btn-outline-dark">Register</button></a>
             </div>
