Added full badge links rather than just title links

--- a/templates/scanner/locationchoice.html
+++ b/templates/scanner/locationchoice.html
@@ -12,7 +12,7 @@ Add Location
         <div class="carousel-container">
 
                 <h2 class="animated fadeInDown">Now choose what type of location you want to add!</h2>
-                <p class="animated fadeInUp">Add Food & Drink, Lifestyle and Nightlife locations!</p>
+                <p class="animated fadeInUp">Add Food & Drink, Nightlife and Lifestyle locations!</p>
                  <a href="#main"><button type="button" class="btn btn-outline-light">Add one now!</button></a>
 
         </div>
@@ -30,27 +30,33 @@ Add Location
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mx-auto" data-aos="fade-up">
+            <a href="<!--TODO: ADD FOOD LINK-->">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Food & Drink</a></h4>
+              <h4 class="title">Food & Drink</h4>
                <p class="description">Find a taste of home or try something new!</p>
             </div>
+            </a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
+            <a href="/<!--TODO: ADD NIGHTLIFE LINK-->">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
-              <h4 class="title"><a href="/profile">Nightlife</a></h4>
+              <h4 class="title">Nightlife</h4>
               <p class="description">Late night venues and bars</p>
             </div>
+              </a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
+            <a href="<!--TODO: ADD LIFESTYLE LINK-->">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
-              <h4 class="title"><a href="/profile">Lifestyle</a></h4>
+              <h4 class="title">Lifestyle</h4>
               <p class="description">Museums, Yoga, Markets... Anything!</p>
             </div>
+              </a>
           </div>
 
         </div>
