--- a/templates/scanner/locationchoice.html
+++ b/templates/scanner/locationchoice.html
@@ -30,7 +30,7 @@ Add Location
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mx-auto" data-aos="fade-up">
-            <a href="<!--TODO: ADD FOOD LINK-->">
+            <a href="{% url 'scanner:add_foodanddrink_page' %}">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title">Food & Drink</h4>
@@ -40,7 +40,7 @@ Add Location
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
-            <a href="/<!--TODO: ADD NIGHTLIFE LINK-->">
+            <a href="{% url 'scanner:add_nightlife_page' %}">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
               <h4 class="title">Nightlife</h4>
@@ -50,7 +50,7 @@ Add Location
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
-            <a href="<!--TODO: ADD LIFESTYLE LINK-->">
+            <a href="{% url 'scanner:add_lifestyle_page' %}">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
               <h4 class="title">Lifestyle</h4>
@@ -65,5 +65,5 @@ Add Location
     </section><!-- End Services Section -->
 
   </main><!-- End #main -->
-  
+
 {% endblock %}
