--- a/templates/scanner/base.html
+++ b/templates/scanner/base.html
@@ -92,13 +92,13 @@
                 <div class="col-lg-3 col-md-6 footer-links">
                     <h4>What are you looking for?</h4>
                     <ul>
-                        <li><i class="bx bx-chevron-right"></i> <a href="home/">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="{% url 'home' %}">Home</a></li>
                         <!-- TODO: FORMAT SEARCH PAGE -->
-                        <li><i class="bx bx-chevron-right"></i> <a href="\Search">Main Search</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="{% url 'scanner:search' %}">Main Search</a></li>
                         {% if user.is_authenticated %}
-                        <li><i class="bx bx-chevron-right"></i> <a href="/profile">Your Page</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="{% url 'scanner:profile' %}">Your Page</a></li>
                         {% else %}
-                        <li><i class="bx bx-chevron-right"></i> <a href="/login">Log In</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="{% url 'scanner:login' %}">Log In</a></li>
                         {% endif %}
                     </ul>
                 </div>
