--- a/templates/scanner/homepage.html
+++ b/templates/scanner/homepage.html
@@ -34,10 +34,10 @@ Get Started
               <h4 class="title"><a href="">Type in a country to get started!</a></h4>
               <form class="form-inline">
                 <div class="form-group mb-2">
-                  <label for="inputPassword2" class="sr-only">Type Here!</label>
-                  <input type="text" class="form-control" id="inputPassword2" placeholder="e.g Greece">
+                  <label for="culture" class="sr-only">Type Here!</label>
+                  <input type="text" class="form-control" name="culturebox" id="culture" placeholder="e.g Greece">
                 </div>
-                <button type="submit" class="btn btn-dark mb-2">Search</button>
+                <button type="submit" class="btn btn-dark mb-2"><a href="{% url 'scanner:choose_type' %}">Search</a></button>
               </form>
             </div>
           </div>
@@ -45,7 +45,7 @@ Get Started
           <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
-              <h4 class="title"><a href="scanner/locationchoice">Add a new Location</a></h4>
+              <h4 class="title"><a href="{% url 'scanner:locationchoice' %}">Add a new Location</a></h4>
               <p class="description">You must be signed in to do this</p>
               <a href="/register"><button type="button" class="btn btn-outline-dark">Register</button></a>
             </div>
