--- a/templates/scanner/homepage.html
+++ b/templates/scanner/homepage.html
@@ -47,7 +47,7 @@ Get Started
               <div class="icon"><i class="bx bx-location-plus"></i></div>
               <h4 class="title"><a href="{% url 'scanner:locationchoice' %}">Add a new Location</a></h4>
               <p class="description">You must be signed in to do this</p>
-              <a href="/register"><button type="button" class="btn btn-outline-dark">Register</button></a>
+              <a href="{% url 'scanner:register' %}"><button type="button" class="btn btn-outline-dark">Register</button></a>
             </div>
           </div>
 
