--- a/templates/scanner/search.html
+++ b/templates/scanner/search.html
@@ -2,4 +2,7 @@
 <h1>Main Search</h1>
 
 <div>
-  <form
+  <form method="get" method='post' action="{% url 'scanner:search' %}">
+    <input id="culture_search" type="text" name="culture_search">
+    <input type="search" value="search">
+  </form>
