--- a/templates/scanner/homepage.html
+++ b/templates/scanner/homepage.html
@@ -11,13 +11,14 @@ Get Started
           </div>-->
         <div class="carousel-container">
 
-                <h2 class="animated fadeInDown">Get Started with <span>CityScanner</span></h2>
-                <p class="animated fadeInUp">Scroll down to see what you've been missing in your city</p>
+                <h2 class="animated fadeInDown">Scroll down to start <span>CityScanner</span></h2>
+               <p class="animated fadeInUp">Locations in Glasgow grouped by nationality</p>
                  <a href="{% url 'scanner:search' %}"><button type="button" class="btn btn-outline-light">Or Search Right Now!</button></a>
 
         </div>
+        </div>
 {% endblock %}
-      </div>
+
 
 </section>
 {% block selection_block %}
