--- a/templates/scanner/login.html
+++ b/templates/scanner/login.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-
-<h1>Login to CityScanner</h1>
-<form id="login_form" method="post" action="{% url 'scanner:login' %}">
-  {% csrf_token %}
-  Username: <input type="text" name="username" value="" size="50" />
-  <br />
-  Password: <input type="password" name="password" value="" size="50" />
-  <br />
-  <input type="submit" value="submit" />
-
+{% extends 'scanner/base.html' %}
+{% load static %}
+{% block title_block %}
+LogIn
+{% endblock %}
+{% block body_block %}
+<div class="carousel-item active">
+  <div class="carousel-container">
+ <h2 class="animated fadeInDown">>Login to CityScanner</h2>
 </form>
-<a href="{% url 'scanner:register' %}">Register Here!</a>
+<form class="form-inline">
+  <div class="form-group mb-2">
+    <label for="username" class="sr-only">Username | </label>
+    <input type="text" name="username" class="form-control-plaintext" id="username" value="" size="50">
+  </div>
+  <div class="form-group mx-sm-3 mb-2">
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" name="password" class="form-control" id="password" placeholder="Password" size="50">
+  </div>
+  <button type="submit" class="btn btn-outline-light">Log in</button>
+</form>
+<a href="{% url 'scanner:register' %}"><button type="button" class="btn btn-outline-light">Register Here</button></a>
+    {% endblock %}
