Sorting search formatting

--- a/templates/scanner/login.html
+++ b/templates/scanner/login.html
@@ -4,6 +4,9 @@
 {% block title_block %}
 LogIn
 {% endblock %}
+{% block extracss %}
+#form-group{text-align:left;}
+{% endblock %}
 {% block body_block %}
 <div class="carousel-item active">
   <div class="carousel-container">
