--- a/templates/scanner/base.html
+++ b/templates/scanner/base.html
@@ -57,7 +57,7 @@
         <nav class="nav-menu float-right d-none d-lg-block">
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="\Search">Main Search</a></li>
+                <li><a href="{% url 'scanner:search' %}">Main Search</a></li>
                 <li><a href="#footer">Contact Us</a></li>
                 <li><a href="#footer">Our Project</a></li>
                 {% if user.is_authenticated %}
