--- a/templates/scanner/searchseperate.html
+++ b/templates/scanner/searchseperate.html
@@ -7,7 +7,7 @@ Search by culture
 
    {% block body_block %}
       <div class="carousel-item active">
-          <!--<div id="filterArea" class="container border">
+          <!--<div id="#" class="container">
 
           </div>-->
         <div class="carousel-container">
