--- a/templates/scanner/locationchoice.html
+++ b/templates/scanner/locationchoice.html
@@ -10,28 +10,12 @@ Add Location
 
           </div>-->
         <div class="carousel-container">
-
-                <h2 class="animated fadeInDown">Now choose what type of location you want to add!</h2>
-                <p class="animated fadeInUp">Add Food & Drink, Nightlife and Lifestyle locations!</p>
-                 <a href="#main"><button type="button" class="btn btn-outline-light">Add one now!</button></a>
-
-        </div>
-          </div>
-{% endblock %}
-
-{% block selection_block %}
-  <main id="main">
-    <br>
-    <br>
-    <br>
-    <!-- ======= Services Section ======= -->
-    <section id="choice" class="services">
-      <div class="container">
+ <div class="container border-light">
 
         <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mx-auto" data-aos="fade-up">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mx-auto border-light" data-aos="fade-up">
             <a href="{% url 'scanner:add_foodanddrink_page' %}">
-            <div class="icon-box icon-box-blue">
+            <div class="icon-box icon-box-light">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title">Food & Drink</h4>
                <p class="description">Find a taste of home or try something new!</p>
@@ -39,9 +23,9 @@ Add Location
             </a>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-6 col-lg-3 d-flex align-items mx-auto border-light" data-aos="fade-up" data-aos-delay="100">
             <a href="{% url 'scanner:add_nightlife_page' %}">
-            <div class="icon-box icon-box-blue">
+            <div class="icon-box icon-box-light">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
               <h4 class="title">Nightlife</h4>
               <p class="description">Late night venues and bars</p>
@@ -49,9 +33,9 @@ Add Location
               </a>
           </div>
 
-          <div class="col-md-6 col-lg-3 d-flex align-items mx-auto" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-6 col-lg-3 d-flex align-items mx-auto border-light" data-aos="fade-up" data-aos-delay="100">
             <a href="{% url 'scanner:add_lifestyle_page' %}">
-            <div class="icon-box icon-box-blue">
+            <div class="icon-box icon-box-light">
               <div class="icon"><i class="bx bx-location-plus"></i></div>
               <h4 class="title">Lifestyle</h4>
               <p class="description">Museums, Yoga, Markets... Anything!</p>
@@ -64,8 +48,7 @@ Add Location
         <br>
 
       </div>
-    </section><!-- End Services Section -->
 
-  </main><!-- End #main -->
-
+        </div>
+          </div>
 {% endblock %}
