--- a/templates/scanner/results.html
+++ b/templates/scanner/results.html
@@ -10,7 +10,7 @@ Locations
     #filterArea{
     text-align: left;
         z-index:1;
-        position: fixed;
+        position: absolute;
     }
     </style>
 {% endblock %}
